# fordera

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
plans/: ford-f-series-classifier.md
src/fordera/: classifier.py  describer.py  evaluate_key.py  interpretability.py  key_experiments.py  keygen.py  preprocessor.py  scraper.py  trait_discovery.py  trait_glossary_images.py  trait_loo.py  trait_visualize.py  vlm_vocabulary.py
tests/: test_classifier.py  test_keygen.py  test_preprocessor.py
